byte-code-compiler/test_files/typing/bad/testfile-undef_fun-1.psc
int_32 main() {
  f(1);
}

